WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181670
CanvasImageData: createImageData() parameter should not be nullable
https://bugs.webkit.org/show_bug.cgi?id=181670
Summary
CanvasImageData: createImageData() parameter should not be nullable
Zan Dobersek
Reported
2018-01-15 23:40:43 PST
CanvasImageData: createImageData() parameter should not be nullable
Attachments
Patch
(7.21 KB, patch)
2018-01-15 23:57 PST
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2018-01-15 23:57:50 PST
Created
attachment 331371
[details]
Patch
Zan Dobersek
Comment 2
2018-01-17 00:59:05 PST
Comment on
attachment 331371
[details]
Patch Clearing flags on attachment: 331371 Committed
r227050
: <
https://trac.webkit.org/changeset/227050
>
Zan Dobersek
Comment 3
2018-01-17 00:59:10 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-01-17 01:00:42 PST
<
rdar://problem/36575972
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug