CanvasImageData: createImageData() parameter should not be nullable https://bugs.webkit.org/show_bug.cgi?id=181670

Reviewed by Sam Weinig.

Source/WebCore:

createImageData() method on the CanvasImageData interface should not
treat the ImageData parameter as nullable, but should instead reject any
null values with a TypeError, as demanded by the specification.

No new tests -- current tests covering createImageData(null) are updated
to properly cover new behavior of throwing a TypeError exception.

* html/canvas/CanvasImageData.idl:
* html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::createImageData const):
* html/canvas/CanvasRenderingContext2DBase.h:

LayoutTests:

Update createImageData(null) tests that should now throw a TypeError.

* canvas/philip/tests/2d.imageData.create1.zero.html:
* fast/canvas/canvas-createImageData-expected.txt:
* fast/canvas/canvas-createImageData.html:


Canonical link: https://commits.webkit.org/197557@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227050 268f45cc-cd09-0410-ab3c-d52691b4dbfc