Source/WebCore/html/canvas/CanvasRenderingContext2DBase.h
@@ -183,7 +183,7 @@ public:
     ExceptionOr<Ref<CanvasGradient>> createRadialGradient(float x0, float y0, float r0, float x1, float y1, float r1);
     ExceptionOr<RefPtr<CanvasPattern>> createPattern(CanvasImageSource&&, const String& repetition);
 
-    ExceptionOr<RefPtr<ImageData>> createImageData(ImageData*) const;
+    RefPtr<ImageData> createImageData(ImageData&) const;
     ExceptionOr<RefPtr<ImageData>> createImageData(float width, float height) const;
     ExceptionOr<RefPtr<ImageData>> getImageData(float sx, float sy, float sw, float sh) const;
     void putImageData(ImageData&, float dx, float dy);
